chore: added scss navigation bar

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
         <section id="HOME" class="hero">
             <article class="content-center">
                 <div class="content-center__container-image">
-                    <img src="./assets/img_01.jpg" alt="hero-img">
+                    <img src="./assets/xulio.png" alt="hero-img">
                     <div class="content-center__container-subtitle">
                         <h1>Hello, I'm</h1>
                         <h2>Xulio Xaviert Rojas</h2>
@@ -50,13 +50,13 @@
                     </div>
                 </div>
                 <div class="gallery__content__img">
-                    <img src="./assets/work_2.jpg" alt="image">
+                    <img src="./assets/work_3.jpg" alt="image">
                     <div>
                         <p>2nd Work - Mobile Practice</p>
                     </div>
                 </div>
                 <div class="gallery__content__img">
-                    <img src="./assets/work_3.jpg" alt="image">
+                    <img src="./assets/work_2.jpg" alt="image">
                     <p>3rd Work - Building "My Portfolio"</p>
                 </div>
             </div>
@@ -68,13 +68,13 @@
                 <h2>My Resume</h2>
             </div>
 
-            <div class="container-resume">
+            <div  class="container-resume">
                 <div class="container-resume__education">
                     <div class="container-resume__education-title">
                         <h3>Education</h3>
 
                         <div class="container-resume__education-card">
-                            <div class="container-resume__education-card-1">
+                            <div class="container-resume__education-card">
                                 <h4>March 2013 - Present</h4>
                                 <h5>Masteral in Information Technology</h5>
                                 <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
@@ -84,7 +84,7 @@
                             </div>
                         </div>
                         <div class="container-resume__education-card">
-                            <div class="container-resume__education-card-2">
+                            <div class="container-resume__education-card">
                                 <h4>March 2014 - Present</h4>
                                 <h5>Masteral in Information Technology</h5>
                                 <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
@@ -94,7 +94,7 @@
                             </div>
                         </div>
                         <div class="container-resume__education-card">
-                            <div class="container-resume__education-card-3">
+                            <div class="container-resume__education-card">
                                 <h4>March 2015 - Present</h4>
                                 <h5>Masteral in Information Technology</h5>
                                 <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
@@ -110,7 +110,7 @@
                         <h3>Experience</h3>
 
                         <div class="container-resume__experience-card">
-                            <div class="container-resume__experience-card-1">
+                            <div class="container-resume__experience-card">
                                 <h4>March 2013 - Present</h4>
                                 <h5>Masteral in Information Technology</h5>
                                 <p>Even the all-powerful Pointing has no control about the blind texts it is an
@@ -121,7 +121,7 @@
                             </div>
                         </div>
                         <div class="container-resume__experience-card">
-                            <div class="container-resume__experience-card-2">
+                            <div class="container-resume__experience-card">
                                 <h4>March 2013 - Present</h4>
                                 <h5>Masteral in Information Technology</h5>
                                 <p>Even the all-powerful Pointing has no control about the blind texts it is an
@@ -132,7 +132,7 @@
                             </div>
                         </div>
                         <div class="container-resume__experience-card">
-                            <div class="container-resume__experience-card-3">
+                            <div class="container-resume__experience-card">
                                 <h4>March 2013 - Present</h4>
                                 <h5>Masteral in Information Technology</h5>
                                 <p>Even the all-powerful Pointing has no control about the blind texts it is an
