added navbar, hero and gallery styles

--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,13 @@
             <ul class="navigation__list">
                 <li class="navigation__list__item"><a href="#HOME">HOME</a></li>
                 <li class="navigation__list__item"><a href="#WORK">WORK</a> </li>
-                <li class="navigation__list__item"><a href="#RESUME">MY RESUME</a>  </li>
+                <li class="navigation__list__item"><a href="#RESUME">MY RESUME</a> </li>
                 <li class="navigation__list__item"><a href="#CONTACT">CONTACT ME</a> </li>
             </ul>
         </nav>
 
     </header>
-    <main >
+    <main>
         <section id="HOME" class="hero">
             <article class="content-center">
                 <div class="content-center__container-image">
@@ -36,28 +36,53 @@
 
         </section>
 
-        <section id="WORK" class="gallery">
+        <section class="gallery">
             <div class="content-center__galerry-subtitle">
-                <h3>AND THIS IS MY RESUME</h3>
-                <h4>Featured Portfolio</h4>
+                <h2>MY WORK</h2>
+                <h3>Featured Portfolio</h3>
             </div>
-            <div class="gallery__content">
-                <div class="gallery__content__img">
-                    <img src="./assets/work_1.jpg" alt="image">
-                    <div>
-                        <p>1st Project - Basic Form</p>
-                    </div>
+            <div id="WORK" class="gallery__content">
+                <div class="gallery__content-card"> <a href="https://restaurant-five-kappa.vercel.app/" target="_blank">
+                        <img src="./assets/img_restaurant.jpg" alt="image">
+                        <h2>1st Project - Duplicar pagina Web</h2>
+                        <H3>Herramientas utilizadas:</H3>
+                        <div class="gallery__content-card-icons">
+                            <p>Html</p> <img src="./assets/icons/html-5.png" alt="image">
+                            <p>Sass</p> <img src="./assets/icons/sass.png" alt="image">
+                        </div>
+                    </a>
                 </div>
-                <div class="gallery__content__img">
-                    <img src="./assets/work_3.jpg" alt="image">
-                    <div>
-                        <p>2nd Work - Mobile Practice</p>
-                    </div>
-                </div>
-                <div class="gallery__content__img">
+
+
+                
+            <div class="gallery__content-card"> <a href="https://restaurant-five-kappa.vercel.app/" target="_blank">
                     <img src="./assets/work_2.jpg" alt="image">
-                    <p>3rd Work - Building "My Portfolio"</p>
+                    <h2>1st Project - Duplicar pagina Web</h2>
+                    <H3>Herramientas utilizadas:</H3>
+                    <div class="gallery__content-card-icons">
+                        <p>Html</p> <img src="./assets/icons/html-5.png" alt="image">
+                        <p>Sass</p> <img src="./assets/icons/sass.png" alt="image">
+                    </div>
+                </a>
+            </div>
+
+
+                <div class="gallery__content-card"> <a href="https://restaurant-five-kappa.vercel.app/" target="_blank">
+                        <img src="./assets/work_3.jpg" alt="image">
+                        <h2>1st Project - Duplicar pagina Web</h2>
+                        <H3>Herramientas utilizadas:</H3>
+                        <div class="gallery__content-card-icons">
+                            <p>Html</p> <img src="./assets/icons/html-5.png" alt="image">
+                            <p>Sass</p> <img src="./assets/icons/sass.png" alt="image">
+                        </div>
+                    </a>
                 </div>
+
+
+
+
+
+
             </div>
         </section>
 
@@ -67,7 +92,7 @@
                 <h2>My Resume</h2>
             </div>
 
-            <div  class="container-resume">
+            <div class="container-resume">
                 <div class="container-resume__education">
                     <div class="container-resume__education-title">
                         <h3>Education</h3>
@@ -149,7 +174,7 @@
         <!-- 2da parts -->
 
         <section id="CONTACT">
-            <div   class="contentainer-form">
+            <div class="contentainer-form">
                 <div class="container-form__question">
                     <h2>Get in Touch</h2>
                     <form class="form" action="">
