--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <header class="header">
-        <nav class="navigation">
+    <header  class="header">
+        <nav  class="navigation">
             <ul class="navigation__list">
                 <li class="navigation__list__item"><a href="#HOME">HOME</a></li>
                 <li class="navigation__list__item"><a href="#WORK">WORK</a> </li>
@@ -19,16 +19,15 @@
                 <li class="navigation__list__item"><a href="#CONTACT">CONTACT ME</a> </li>
             </ul>
         </nav>
-
-    </header>
-    <main>
-        <section id="HOME" class="hero">
+    </header >
+    <main id="HOME">
+        <section class="hero">
             <article class="content-center">
-                <div class="content-center__container-image">
+                <div  class="content-center__container-image">
                     <img src="./assets/xulio.png" alt="hero-img">
                     <div class="content-center__container-subtitle">
-                        <h1>Hello, I'm</h1>
-                        <h2>Xulio Xaviert Rojas</h2>
+                        <h1 id="WORK">Hello, I'm</h1>
+                        <h2 >Xulio Xaviert Rojas</h2>
                     </div>
                 </div>
 
@@ -36,12 +35,12 @@
 
         </section>
 
-        <section class="gallery">
+        <section   class="gallery">
             <div class="content-center__galerry-subtitle">
                 <h2>MY WORK</h2>
                 <h3>Featured Portfolio</h3>
             </div>
-            <div id="WORK" class="gallery__content">
+            <div  class="gallery__content">
                 <div class="gallery__content-card"> <a href="https://restaurant-five-kappa.vercel.app/" target="_blank">
                         <img src="./assets/img_restaurant.jpg" alt="image">
                         <h2>1st Project - Duplicar pagina Web</h2>
