--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <header  class="header">
-        <nav  class="navigation">
+    <header class="header">
+        <nav class="navigation">
             <ul class="navigation__list">
                 <li class="navigation__list__item"><a href="#HOME">HOME</a></li>
                 <li class="navigation__list__item"><a href="#WORK">WORK</a> </li>
@@ -19,15 +19,15 @@
                 <li class="navigation__list__item"><a href="#CONTACT">CONTACT ME</a> </li>
             </ul>
         </nav>
-    </header >
+    </header>
     <main id="HOME">
         <section class="hero">
             <article class="content-center">
-                <div  class="content-center__container-image">
+                <div class="content-center__container-image">
                     <img src="./assets/xulio.png" alt="hero-img">
                     <div class="content-center__container-subtitle">
                         <h1 id="WORK">Hello, I'm</h1>
-                        <h2 >Xulio Xaviert Rojas</h2>
+                        <h2>Xulio Xaviert Rojas</h2>
                     </div>
                 </div>
 
@@ -35,40 +35,15 @@
 
         </section>
 
-        <section   class="gallery">
+        <section class="gallery">
             <div class="content-center__galerry-subtitle">
                 <h2>MY WORK</h2>
                 <h3>Featured Portfolio</h3>
             </div>
-            <div  class="gallery__content">
+            <div class="gallery__content">
                 <div class="gallery__content-card"> <a href="https://restaurant-five-kappa.vercel.app/" target="_blank">
                         <img src="./assets/img_restaurant.jpg" alt="image">
-                        <h2>1st Project - Duplicar pagina Web</h2>
-                        <H3>Herramientas utilizadas:</H3>
-                        <div class="gallery__content-card-icons">
-                            <p>Html</p> <img src="./assets/icons/html-5.png" alt="image">
-                            <p>Sass</p> <img src="./assets/icons/sass.png" alt="image">
-                        </div>
-                    </a>
-                </div>
-
-
-                
-            <div class="gallery__content-card"> <a href="https://restaurant-five-kappa.vercel.app/" target="_blank">
-                    <img src="./assets/work_2.jpg" alt="image">
-                    <h2>1st Project - Duplicar pagina Web</h2>
-                    <H3>Herramientas utilizadas:</H3>
-                    <div class="gallery__content-card-icons">
-                        <p>Html</p> <img src="./assets/icons/html-5.png" alt="image">
-                        <p>Sass</p> <img src="./assets/icons/sass.png" alt="image">
-                    </div>
-                </a>
-            </div>
-
-
-                <div class="gallery__content-card"> <a href="https://restaurant-five-kappa.vercel.app/" target="_blank">
-                        <img src="./assets/work_3.jpg" alt="image">
-                        <h2>1st Project - Duplicar pagina Web</h2>
+                        <h2>Creación pagina Web: Restaurante</h2>
                         <H3>Herramientas utilizadas:</H3>
                         <div class="gallery__content-card-icons">
                             <p>Html</p> <img src="./assets/icons/html-5.png" alt="image">
@@ -79,6 +54,56 @@
 
 
 
+                <div class="gallery__content-card"> <a href="https://replicar-slack.vercel.app/" target="_blank">
+                        <img src="./assets/work_2.jpg" alt="image">
+                        <h2>Recreación pagina Web adaptada a dispositivos móviles (Responsive)</h2>
+                        <H3>Herramientas utilizadas:</H3>
+                        <div class="gallery__content-card-icons">
+                            <p>Html</p> <img src="./assets/icons/html-5.png" alt="image">
+                            <p>Css</p> <img src="./assets/icons/css-3.png" alt="image">
+                        </div>
+                    </a>
+                </div>
+
+
+                <div class="gallery__content-card"> <a href="https://poke-api-liart-three.vercel.app/" target="_blank">
+                        <img src="./assets/work_3_pokeApi.jpg" alt="image">
+                        <h2>Creación de Página Web consumiendo Api pública (https://pokeapi.co/)</h2>
+                        <H3>Herramientas utilizadas:</H3>
+                        <div class="gallery__content-card-icons">
+                            <p>Html</p> <img src="./assets/icons/html-5.png" alt="image">
+                            <p>Css</p> <img src="./assets/icons/css-3.png" alt="image">
+                            <p>Javascript</p> <img src="./assets/icons/js.png" alt="image">
+                        </div>
+                    </a>
+                </div>
+
+
+                <div class="gallery__content-card"> <a href="https://formula1-page.vercel.app/" target="_blank">
+                        <img src="./assets/work_4_formula1Page.jpg" alt="image">
+                        <h2>Creación de Página Web consumiendo Api propia con autenticación</h2>
+                        <H3>Herramientas utilizadas:</H3>
+                        <div class="gallery__content-card-icons">
+                            <p>Html</p> <img src="./assets/icons/html-5.png" alt="image">
+                            <p>Css</p> <img src="./assets/icons/css-3.png" alt="image">
+                            <p>Javascript</p> <img src="./assets/icons/js.png" alt="image">
+                            <p>Nodejs</p> <img src="./assets/icons/nodejs.png" alt="image">
+                        </div>
+                    </a>
+                </div>
+
+                <div class="gallery__content-card"> <a href="https://rickandmorty-api-react.vercel.app/" target="_blank">
+                        <img src="./assets/work_5_rickandmortyApi.jpg" alt="image">
+                        <h2>Aplicación hecha con React, consumiendo Api pública con rutas, paginación y busqueda de personajes</h2>
+                        <H3>Herramientas utilizadas:</H3>
+                        <div class="gallery__content-card-icons">
+                            <p>Html</p> <img src="./assets/icons/html-5.png" alt="image">
+                            <p>Scss</p> <img src="./assets/icons/sass.png" alt="image">
+                            <p>Javascript</p> <img src="./assets/icons/js.png" alt="image">
+                            <p>React</p> <img src="./assets/icons/react.png" alt="image">
+                        </div>
+                    </a>
+                </div>
 
 
 
