added project to gallery

--- a/src/index.html
+++ b/src/index.html
@@ -92,9 +92,11 @@
                     </a>
                 </div>
 
-                <div class="gallery__content-card"> <a href="https://rickandmorty-api-react.vercel.app/" target="_blank">
+                <div class="gallery__content-card"> <a href="https://rickandmorty-api-react.vercel.app/"
+                        target="_blank">
                         <img src="./assets/work_5_rickandmortyApi.jpg" alt="image">
-                        <h2>Aplicación hecha con React, consumiendo Api pública con rutas, paginación y busqueda de personajes</h2>
+                        <h2>Aplicación hecha con React, consumiendo Api pública con rutas, paginación y busqueda de
+                            personajes (https://rickandmortyapi.com/)</h2>
                         <H3>Herramientas utilizadas:</H3>
                         <div class="gallery__content-card-icons">
                             <p>Html</p> <img src="./assets/icons/html-5.png" alt="image">
@@ -105,10 +107,59 @@
                     </a>
                 </div>
 
+                <div class="gallery__content-card"> <a href="https://the-star-wars-api-omega.vercel.app/"
+                        target="_blank">
+                        <img src="./assets/work_6_star-warsApp.jpg" alt="image">
+                        <h2>Aplicación hecha con React, consumiendo Api pública con rutas, paginación, detalle de
+                            personajes, Login, Logout y autenticación (https://starwars-server.vercel.app/)</h2>
+                        <H3>Herramientas utilizadas:</H3>
+                        <div class="gallery__content-card-icons">
+                            <p>Html</p> <img src="./assets/icons/html-5.png" alt="image">
+                            <p>Scss</p> <img src="./assets/icons/sass.png" alt="image">
+                            <p>Javascript</p> <img src="./assets/icons/js.png" alt="image">
+                            <p>React</p> <img src="./assets/icons/react.png" alt="image">
+                        </div>
+                    </a>
+                </div>
+
+                <div class="gallery__content-card"> <a href="https://the-simpsons-app-angular.vercel.app/"
+                        target="_blank">
+                        <img src="./assets/work_7_theSimpsonsApp.jpg" alt="image">
+                        <h2>Aplicación hecha con Angular, consumiendo Api pública con busqueda de pesonajes
+                            (https://api.sampleapis.com/simpsons/info)</h2>
+                        <H3>Herramientas utilizadas:</H3>
+                        <div class="gallery__content-card-icons">
+                            <p>Html</p> <img src="./assets/icons/html-5.png" alt="image">
+                            <p>Scss</p> <img src="./assets/icons/sass.png" alt="image">
+                            <p>Javascript</p> <img src="./assets/icons/js.png" alt="image">
+                            <p>Angular</p> <img src="./assets/icons/angular.png" alt="image">
+                        </div>
+                    </a>
+                </div>
+
+                <div class="gallery__content-card"> <a href="https://futurama-app-angular.vercel.app/home"
+                        target="_blank">
+                        <img src="./assets/work_8_futuramaApp.jpg" alt="image">
+                        <h2>Aplicación hecha con Angular, consumiendo Api pública utilizando rutas, detalles de personaje y dark mode (https://api.sampleapis.com/futurama/info)</h2>
+                        <H3>Herramientas utilizadas:</H3>
+                        <div class="gallery__content-card-icons">
+                            <p>Html</p> <img src="./assets/icons/html-5.png" alt="image">
+                            <p>Scss</p> <img src="./assets/icons/sass.png" alt="image">
+                            <p>Javascript</p> <img src="./assets/icons/js.png" alt="image">
+                            <p>Angular</p> <img src="./assets/icons/angular.png" alt="image">
+                        </div>
+                    </a>
+                </div>
+
+
 
 
             </div>
         </section>
+
+
+
+
 
         <!-- 2nd parts -->
         <section id="RESUME" class="resume">
