added styles to experience and educatiion container

--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,9 @@
         <nav class="navigation">
             <ul class="navigation__list">
                 <li class="navigation__list__item"><a href="#HOME">HOME</a></li>
-                <li class="navigation__list__item"><a href="#WORK">WORK</a> </li>
-                <li class="navigation__list__item"><a href="#RESUME">MY RESUME</a> </li>
-                <li class="navigation__list__item"><a href="#CONTACT">CONTACT ME</a> </li>
+                <li class="navigation__list__item"><a href="#WORK">PROYECTOS</a> </li>
+                <li class="navigation__list__item"><a href="#RESUME">RESUMEN</a> </li>
+                <li class="navigation__list__item"><a href="#CONTACT">CONTACTO</a> </li>
             </ul>
         </nav>
     </header>
@@ -26,8 +26,8 @@
                 <div class="content-center__container-image">
                     <img src="./assets/xulio.png" alt="hero-img">
                     <div class="content-center__container-subtitle">
-                        <h1 id="WORK">Hello, I'm</h1>
-                        <h2>Xulio Xaviert Rojas</h2>
+                        <h1 id="WORK">Hola, Mi nombre</h1>
+                        <h2>Xulio Xaviert Rojas Teixeira</h2>
                     </div>
                 </div>
 
@@ -37,17 +37,17 @@
 
         <section class="gallery">
             <div class="content-center__galerry-subtitle">
-                <h2>MY WORK</h2>
-                <h3>Featured Portfolio</h3>
+                <h2>MIS PROYECTOS</h2>
+                <h3>Portafolio</h3>
             </div>
             <div class="gallery__content">
                 <div class="gallery__content-card"> <a href="https://restaurant-five-kappa.vercel.app/" target="_blank">
                         <img src="./assets/img_restaurant.jpg" alt="image">
-                        <h2>Creación pagina Web: Restaurante</h2>
-                        <H3>Herramientas utilizadas:</H3>
+                        <h2>Creación pagina Web: Restaurante (Responsive)</h2>
+                        <H3>Herramientas utilizadas: </H3>
                         <div class="gallery__content-card-icons">
-                            <p>Html</p> <img src="./assets/icons/html-5.png" alt="image">
-                            <p>Sass</p> <img src="./assets/icons/sass.png" alt="image">
+                            <p>Html: </p> <img src="./assets/icons/html-5.png" alt="image">
+                            <p>Sass: </p> <img src="./assets/icons/sass.png" alt="image">
                         </div>
                     </a>
                 </div>
@@ -57,10 +57,10 @@
                 <div class="gallery__content-card"> <a href="https://replicar-slack.vercel.app/" target="_blank">
                         <img src="./assets/work_2.jpg" alt="image">
                         <h2>Recreación pagina Web adaptada a dispositivos móviles (Responsive)</h2>
-                        <H3>Herramientas utilizadas:</H3>
+                        <H3>Herramientas utilizadas: </H3>
                         <div class="gallery__content-card-icons">
-                            <p>Html</p> <img src="./assets/icons/html-5.png" alt="image">
-                            <p>Css</p> <img src="./assets/icons/css-3.png" alt="image">
+                            <p>Html: </p> <img src="./assets/icons/html-5.png" alt="image">
+                            <p>Css: </p> <img src="./assets/icons/css-3.png" alt="image">
                         </div>
                     </a>
                 </div>
@@ -71,9 +71,9 @@
                         <h2>Creación de Página Web consumiendo Api pública (https://pokeapi.co/)</h2>
                         <H3>Herramientas utilizadas:</H3>
                         <div class="gallery__content-card-icons">
-                            <p>Html</p> <img src="./assets/icons/html-5.png" alt="image">
-                            <p>Css</p> <img src="./assets/icons/css-3.png" alt="image">
-                            <p>Javascript</p> <img src="./assets/icons/js.png" alt="image">
+                            <p>Html: </p> <img src="./assets/icons/html-5.png" alt="image">
+                            <p>Css: </p> <img src="./assets/icons/css-3.png" alt="image">
+                            <p>Javascript: </p> <img src="./assets/icons/js.png" alt="image">
                         </div>
                     </a>
                 </div>
@@ -84,10 +84,10 @@
                         <h2>Creación de Página Web consumiendo Api propia con autenticación</h2>
                         <H3>Herramientas utilizadas:</H3>
                         <div class="gallery__content-card-icons">
-                            <p>Html</p> <img src="./assets/icons/html-5.png" alt="image">
-                            <p>Css</p> <img src="./assets/icons/css-3.png" alt="image">
-                            <p>Javascript</p> <img src="./assets/icons/js.png" alt="image">
-                            <p>Nodejs</p> <img src="./assets/icons/nodejs.png" alt="image">
+                            <p>Html: </p> <img src="./assets/icons/html-5.png" alt="image">
+                            <p>Css: </p> <img src="./assets/icons/css-3.png" alt="image">
+                            <p>Javascript: </p> <img src="./assets/icons/js.png" alt="image">
+                            <p>Nodejs: </p> <img src="./assets/icons/nodejs.png" alt="image">
                         </div>
                     </a>
                 </div>
@@ -99,10 +99,10 @@
                             personajes (https://rickandmortyapi.com/)</h2>
                         <H3>Herramientas utilizadas:</H3>
                         <div class="gallery__content-card-icons">
-                            <p>Html</p> <img src="./assets/icons/html-5.png" alt="image">
-                            <p>Scss</p> <img src="./assets/icons/sass.png" alt="image">
-                            <p>Javascript</p> <img src="./assets/icons/js.png" alt="image">
-                            <p>React</p> <img src="./assets/icons/react.png" alt="image">
+                            <p>Html: </p> <img src="./assets/icons/html-5.png" alt="image">
+                            <p>Scss: </p> <img src="./assets/icons/sass.png" alt="image">
+                            <p>Javascript: </p> <img src="./assets/icons/js.png" alt="image">
+                            <p>React: </p> <img src="./assets/icons/react.png" alt="image">
                         </div>
                     </a>
                 </div>
@@ -114,10 +114,10 @@
                             personajes, Login, Logout y autenticación (https://starwars-server.vercel.app/)</h2>
                         <H3>Herramientas utilizadas:</H3>
                         <div class="gallery__content-card-icons">
-                            <p>Html</p> <img src="./assets/icons/html-5.png" alt="image">
-                            <p>Scss</p> <img src="./assets/icons/sass.png" alt="image">
-                            <p>Javascript</p> <img src="./assets/icons/js.png" alt="image">
-                            <p>React</p> <img src="./assets/icons/react.png" alt="image">
+                            <p>Html: </p> <img src="./assets/icons/html-5.png" alt="image">
+                            <p>Scss: </p> <img src="./assets/icons/sass.png" alt="image">
+                            <p>Javascript: </p> <img src="./assets/icons/js.png" alt="image">
+                            <p>React: </p> <img src="./assets/icons/react.png" alt="image">
                         </div>
                     </a>
                 </div>
@@ -129,10 +129,10 @@
                             (https://api.sampleapis.com/simpsons/info)</h2>
                         <H3>Herramientas utilizadas:</H3>
                         <div class="gallery__content-card-icons">
-                            <p>Html</p> <img src="./assets/icons/html-5.png" alt="image">
-                            <p>Scss</p> <img src="./assets/icons/sass.png" alt="image">
-                            <p>Javascript</p> <img src="./assets/icons/js.png" alt="image">
-                            <p>Angular</p> <img src="./assets/icons/angular.png" alt="image">
+                            <p>Html: </p> <img src="./assets/icons/html-5.png" alt="image">
+                            <p>Scss: </p> <img src="./assets/icons/sass.png" alt="image">
+                            <p>Javascript: </p> <img src="./assets/icons/js.png" alt="image">
+                            <p>Angular: </p> <img src="./assets/icons/angular.png" alt="image">
                         </div>
                     </a>
                 </div>
@@ -140,109 +140,91 @@
                 <div class="gallery__content-card"> <a href="https://futurama-app-angular.vercel.app/home"
                         target="_blank">
                         <img src="./assets/work_8_futuramaApp.jpg" alt="image">
-                        <h2>Aplicación hecha con Angular, consumiendo Api pública utilizando rutas, detalles de personaje y dark mode (https://api.sampleapis.com/futurama/info)</h2>
+                        <h2>Aplicación hecha con Angular, consumiendo Api pública utilizando rutas, detalles de
+                            personaje y dark mode (https://api.sampleapis.com/futurama/info)</h2>
                         <H3>Herramientas utilizadas:</H3>
                         <div class="gallery__content-card-icons">
-                            <p>Html</p> <img src="./assets/icons/html-5.png" alt="image">
-                            <p>Scss</p> <img src="./assets/icons/sass.png" alt="image">
-                            <p>Javascript</p> <img src="./assets/icons/js.png" alt="image">
-                            <p>Angular</p> <img src="./assets/icons/angular.png" alt="image">
+                            <p>Html: </p> <img src="./assets/icons/html-5.png" alt="image">
+                            <p>Scss: </p> <img src="./assets/icons/sass.png" alt="image">
+                            <p>Javascript: </p> <img src="./assets/icons/js.png" alt="image">
+                            <p>Angular: </p> <img src="./assets/icons/angular.png" alt="image" id="RESUME">
                         </div>
                     </a>
                 </div>
 
-
-
-
             </div>
         </section>
 
-
-
-
-
         <!-- 2nd parts -->
-        <section id="RESUME" class="resume">
+        <section class="resume">
             <div class="container-resume__title">
-                <h2>My Resume</h2>
+                <h2>RESUMEN</h2>
             </div>
 
             <div class="container-resume">
                 <div class="container-resume__education">
                     <div class="container-resume__education-title">
                         <h3>Education</h3>
-
-                        <div class="container-resume__education-card">
-                            <div class="container-resume__education-card">
-                                <h4>March 2013 - Present</h4>
-                                <h5>Masteral in Information Technology</h5>
-                                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-                                    unorthographic.
-                                </p>
-                                <h5>New York University</h5>
-                            </div>
-                        </div>
-                        <div class="container-resume__education-card">
-                            <div class="container-resume__education-card">
-                                <h4>March 2014 - Present</h4>
-                                <h5>Masteral in Information Technology</h5>
-                                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-                                    unorthographic.
-                                </p>
-                                <h5>New York University</h5>
-                            </div>
-                        </div>
-                        <div class="container-resume__education-card">
-                            <div class="container-resume__education-card">
-                                <h4>March 2015 - Present</h4>
-                                <h5>Masteral in Information Technology</h5>
-                                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-                                    unorthographic.
-                                </p>
-                                <h5>New York University</h5>
-                            </div>
-                        </div>
                     </div>
+                    <div class="container-resume__education-card">
+                        <h5>Febrero 2022 - Actual.</h5>
+                        <h4>Full Stack Development.</h4>
+                        <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
+                            unorthographic.
+                        </p>
+                        <p>Upgrade Hub.</p>
+                    </div>
+                    <div class="container-resume__education-card">
+                        <h5>March 2014 - Present</h5>
+                        <h4>Masteral in Information Technology</h4>
+                        <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
+                            unorthographic.
+                        </p>
+                        <p>New York University</p>
+                    </div>
+                    <div class="container-resume__education-card">
+                        <h5>March 2015 - Present</h5>
+                        <h4>Masteral in Information Technology</h4>
+                        <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
+                            unorthographic.
+                        </p>
+                        <p>New York University</p>
+                    </div>
+
                 </div>
                 <div class="container-resume__experience">
                     <div class="container-resume__experience-title">
                         <h3>Experience</h3>
-
-                        <div class="container-resume__experience-card">
-                            <div class="container-resume__experience-card">
-                                <h4>March 2013 - Present</h4>
-                                <h5>Masteral in Information Technology</h5>
-                                <p>Even the all-powerful Pointing has no control about the blind texts it is an
-                                    almost
-                                    unorthographic.
-                                </p>
-                                <h5>New York University</h5>
-                            </div>
-                        </div>
-                        <div class="container-resume__experience-card">
-                            <div class="container-resume__experience-card">
-                                <h4>March 2013 - Present</h4>
-                                <h5>Masteral in Information Technology</h5>
-                                <p>Even the all-powerful Pointing has no control about the blind texts it is an
-                                    almost
-                                    unorthographic.
-                                </p>
-                                <h5>New York University</h5>
-                            </div>
-                        </div>
-                        <div class="container-resume__experience-card">
-                            <div class="container-resume__experience-card">
-                                <h4>March 2013 - Present</h4>
-                                <h5>Masteral in Information Technology</h5>
-                                <p>Even the all-powerful Pointing has no control about the blind texts it is an
-                                    almost
-                                    unorthographic.
-                                </p>
-                                <h5>New York University</h5>
-                            </div>
-                        </div>
-
                     </div>
+                    <div class="container-resume__experience-card">
+                        <h5>March 2013 - Present</h5>
+                        <h4>Masteral in Information Technology</h4>
+                        <p>Even the all-powerful Pointing has no control about the blind texts it is an
+                            almost
+                            unorthographic.
+                        </p>
+                        <p>New York University</p>
+                    </div>
+                    <div class="container-resume__experience-card">
+                        <h5>March 2013 - Present</h5>
+                        <h4>Masteral in Information Technology</h4>
+                        <p>Even the all-powerful Pointing has no control about the blind texts it is an
+                            almost
+                            unorthographic.
+                        </p>
+                        <p>New York University</p>
+                    </div>
+                    <div class="container-resume__experience-card">
+                        <h5>March 2013 - Present</h5>
+                        <h4>Masteral in Information Technology</h4>
+                        <p>Even the all-powerful Pointing has no control about the blind texts it is an
+                            almost
+                            unorthographic.
+                        </p>
+                        <p>New York University</p>
+                    </div>
+
+
                 </div>
             </div>
         </section>
