fixed navbar responsive

--- a/src/index.html
+++ b/src/index.html
@@ -317,10 +317,10 @@
             <div class="container-footer__icons">
 
                 <a href="https://www.linkedin.com/in/xulio-xaviert-rojas-teixeira/" target="_blank"> <img
-                        src="./assets/icons/linkedin.png" alt="img"></a>
-                <a href="https://github.com/xulioxaviert/" target="_blank"> <img src="./assets/icons/github.png"
+                        src="./assets/icons/linkedin.svg" alt="img"></a>
+                <a href="https://github.com/xulioxaviert/" target="_blank"> <img src="./assets/icons/github.svg"
                         alt="img"></a>
-                <a href="https://vercel.com/xulioxaviert" target="_blank"> <img src="./assets/icons/vercel.png"
+                <a href="https://vercel.com/xulioxaviert" target="_blank"> <img src="./assets/icons/vercel.svg"
                         alt="img"></a>
 
             </div>
