--- a/src/index.html
+++ b/src/index.html
@@ -322,7 +322,7 @@
                         src="./assets/icons/linkedin.svg" alt="img"></a>
                 <a href="https://github.com/xulioxaviert/" target="_blank"> <img src="./assets/icons/github.svg"
                         alt="img"></a>
-                <a href="https://vercel.com/xulioxaviert" target="_blank"> <img src="./assets/icons/vercel.svg"
+                <a href="https://vercel.com/xulioxaviert/portfolio" target="_blank"> <img src="./assets/icons/vercel.svg"
                         alt="img"></a>
 
             </div>
