arrangement of small details

--- a/src/index.html
+++ b/src/index.html
@@ -172,7 +172,7 @@
                         <li>Trabajar con usuarios exigentes que permitan ofrecer lo mejor de mí para resolver sus problemas y lograr juntos sus
                         objetivos.</li>
                     </ul>    
-                    <p>Por favor, no olvides revisar la sección <a href="#WORK" class="container-about__work">"Mis Proyectos"</a>, donde he conseguido poner en práctica los conocimientos adquiridos a lo largo de estos meses (HTML5, CSS3, SAAS, Javascript, Angular, React, Node JS, PHP (Symphony), MongoDB, MySQL).</p>
+                    <p>Por favor, no olvides revisar la sección <a href="#WORK" class="container-about__work">"Mis Proyectos"</a>, donde he conseguido poner en práctica los conocimientos adquiridos a lo largo de estos meses (HTML5, CSS3, SAAS, Javascript, Angular, React, Node JS, PHP (Symfony), MongoDB, MySQL).</p>
                     
                     <div class="container-about__details">
                         <h3>Datos de contacto: </h3>
